--- a/css/portfolio/style.css
+++ b/css/portfolio/style.css
@@ -85,6 +85,15 @@ article p {
     height: 10em;
 }
 
+    .subTopics {
+        text-align: center;
+    }
+
+    .subTopics img {
+        width: 100%;
+        height: 10em;
+    }
+
 a {
     color: black;
 }
@@ -108,6 +117,10 @@ footer div img {
 footer div { 
     text-align: bottom;
 }
+    .icons img {
+        width: 2em;
+        height: 2em;
+    }
 
 button {
     background-color: green;
@@ -119,4 +132,15 @@ button {
     font-weight: bold;
     color: white;
     box-shadow: 2px 2px 2px black;
+}footer {
+    text-align: center;
 }
+
+    footer div img {
+        width: 1em;
+        height: 1em;
+    }
+
+    footer div { 
+        text-align: bottom;
+    }
